<resources>
    <string name="app_name">RoMote</string>

    <string name="empty_list">No devices detected</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="empty_channel_list">No channels detected</string>
    <string name="no_device_connected">No device connected</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_info">Info</string>
    <string name="action_unpair">Unpair</string>
    <string name="action_rename">Rename</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="navigate_up_content_description">Navigate up</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_hint">Type to send to your Roku</string>
    <string name="keyboard_backspace">Backspace</string>
    <string name="device_options_content_description">Device options</string>
    <string name="more_options_content_description">More options</string>

    <string name="discovering_devices">Discovering devices ...</string>
    <string name="connect_manually">Connect Manually</string>
    <string name="connect_help">Enter your Roku device\'s complete IP address</string>
    <string name="ip_address_hint" translatable="false">192.168.1.100</string>
    <string name="connect">Connect</string>
    <string name="search_help">Enter your search criteria:</string>
    <string name="go">Go</string>
    <string name="checking_ip_address">Checking IP Address ...</string>
    <string name="no_roku_device">No Roku device could be found at this IP Address. Please check the IP address and try again.</string>
    <string name="connected">Connected</string>
    <string name="serial_number">SN: %1$s</string>
    <string name="device_connected">Device %1$s connected</string>
    <string name="not_connected">Not connected</string>
    <string name="device_name">Device name</string>
    <string name="device_name_help">Enter a device name:</string>

    <string name="title_devices">Devices</string>
    <string name="title_remote">Remote</string>
    <string name="title_channels">Channels</string>
    <string name="title_device_info">Device info</string>
    <string name="title_settings">Settings</string>
    <string name="title_store">Store</string>
    <string name="title_connect_manually">Connect manually</string>
    <string name="title_romote_widget">RoMote Widget</string>

    <string name="connectivity_dialog_title">No local network</string>
    <string name="connectivity_dialog_message">This phone isn\'t on a Wi-Fi or wired network, so it can\'t reach your Roku. Mobile data can\'t reach it either.</string>
    <string name="connectivity_dialog_button">Go to settings</string>
    <string name="connectivity_dialog_dismiss_button">Dismiss</string>

    <string name="remote_access_dialog_title">Enable remote control</string>
    <string name="remote_access_dialog_message">Roku blocks third-party remotes by default. To let RoMote control your device:</string>
    <string name="remote_access_dialog_step_1">1. On your Roku, press Home and open Settings.</string>
    <string name="remote_access_dialog_step_2">2. Select System, then Advanced system settings.</string>
    <string name="remote_access_dialog_step_3">3. Select Control by mobile apps, then Network access.</string>
    <string name="remote_access_dialog_step_4">4. Choose Enabled (or Permissive).</string>
    <string name="remote_access_dialog_step_5">5. Return to RoMote and select your device.</string>
    <string name="remote_access_dialog_note">The default setting, Limited, only allows text input and app launches.</string>
    <string name="remote_access_dialog_confirm">Got it</string>
    <string name="remote_access_dialog_learn_more">Learn more</string>

    <string name="install_channel_dialog_title">New channel</string>
    <string name="install_channel_dialog_message">"Would you like to install the following channel: "</string>
    <string name="install_channel_dialog_button">Install</string>

    <string name="no_device_info">Device information could not be retrieved</string>

    <string name="settings_other_category">Other</string>

    <string name="shake_to_pause_title_checkbox_preference">Shake to pause</string>
    <string name="shake_to_pause_summary_checkbox_preference">Enable the ability to pause device playback by shaking the device</string>

    <string name="notification_title_checkbox_preference">Enable notification widget</string>
    <string name="notification_to_pause_summary_checkbox_preference">Enable the ability to control playback using a notification widget</string>
    <string name="notification_permission_denied">RoMote needs notification permission to show the playback widget. You can grant it in Settings &gt; Apps &gt; RoMote &gt; Notifications.</string>

    <string name="haptic_feedback_title_checkbox_preference">Provide haptic feedback</string>
    <string name="haptic_feedback_summary_checkbox_preference">Provide haptic feedback (vibrate) on remote button taps</string>

    <string name="find_remote_title_preference">Find Remote</string>
    <string name="find_remote_summary_preference">Locate a missing remote</string>

    <string name="open_source_licenses_title_preference">Open Source Licenses</string>

    <string name="rate_app_title_preference">Rate RoMote</string>
    <string name="rate_app_summary_preference">Rate the app on Google Play</string>
    <string name="donate_title_preference">Donate</string>
    <string name="donate_summary_preference">Support RoMote development</string>

    <string name="close">Close</string>

    <string name="power_dialog_title">Power Off</string>
    <string name="power_dialog_message">Are you sure you want to turn off the device?</string>
    <string name="waking_device">Waking device…</string>
    <string name="wake_no_mac">No MAC address stored for this device</string>
    <string name="wake_failed">Couldn\'t wake the device</string>

    <string name="download_private_listening">Private listening is experimental and support may be discontinued at
        any time. In order to enable private listening please download and install the companion plugin.</string>
    <!-- Spoken labels for the remote's buttons, which as ImageButtons had none. -->
    <string name="remote_back">Back</string>
    <string name="remote_options">Options</string>
    <string name="remote_home">Home</string>
    <string name="remote_power">Power</string>
    <string name="remote_up">Up</string>
    <string name="remote_left">Left</string>
    <string name="remote_select">Select</string>
    <string name="remote_right">Right</string>
    <string name="remote_down">Down</string>
    <string name="remote_rewind">Rewind</string>
    <string name="remote_play_pause">Play or pause</string>
    <string name="remote_fast_forward">Fast forward</string>
    <string name="remote_instant_replay">Instant replay</string>
    <string name="remote_private_listening">Private listening</string>
    <string name="remote_volume_mute">Mute</string>
    <string name="remote_volume_down">Volume down</string>
    <string name="remote_volume_up">Volume up</string>
</resources>
