<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="shake_to_pause_checkbox_preference"
        android:title="@string/shake_to_pause_title_checkbox_preference"
        android:summary="@string/shake_to_pause_summary_checkbox_preference"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="notification_checkbox_preference"
        android:title="@string/notification_title_checkbox_preference"
        android:summary="@string/notification_to_pause_summary_checkbox_preference"
        android:defaultValue="false"/>

    <CheckBoxPreference
        android:key="haptic_feedback_preference"
        android:title="@string/haptic_feedback_title_checkbox_preference"
        android:summary="@string/haptic_feedback_summary_checkbox_preference"
        android:defaultValue="false"/>

    <PreferenceCategory
        android:title="Other">

        <Preference
            android:key="find_remote"
            android:title="@string/find_remote_title_preference"
            android:summary="@string/find_remote_summary_preference">
        </Preference>

        <Preference
            android:key="donate"
            android:title="@string/donate_title_preference"
            android:summary="@string/donate_summary_preference">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>