<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ip_address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="192.168.1."/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/connect"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:background="@drawable/buttonshape"
        app:backgroundTint="#a865f3"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/no_roku_device"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/checking_ip_address"/>

    </LinearLayout>

</LinearLayout>
